nullaway_error_50F68588-9832-470B-84F1-3E0C022538BE.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/http/RequestEntity.java:740: error: [NullAway] dereferenced expression otherEntity is @Nullable
			return (ObjectUtils.nullSafeEquals(this.uriTemplate, otherEntity.uriTemplate) &&
			                                                                ^
    (see http://t.uber.com/nullaway )
